@@ -27,6 +27,7 @@ Version 0.3
 - fixed error handling of the url adapter's `dispatch` method. (#318)
 - fixed bug with `SharedDataMiddleware`.
 - fixed `Accept.values`.
+- `EnvironHeaders` contain content-type and content-length now
 
 
 Version 0.2
